--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,13 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             var referrer = document.referrer;
-            if (!referrer.includes("LinkedIn")) {
-                var currentUrl = window.location.href;
-                var utmParams = "utm_source=example&utm_medium=web&utm_campaign=test";
+            var currentUrl = window.location.href;
+            var utmParams = "utm_source=example&utm_medium=web&utm_campaign=test";
+
+            // Check if the URL already contains the UTM parameters
+            var utmParamsPresent = currentUrl.includes("utm_source") || currentUrl.includes("utm_medium") || currentUrl.includes("utm_campaign");
+
+            if (!referrer.includes("LinkedIn") && !utmParamsPresent) {
                 if (currentUrl.includes("?")) {
                     currentUrl += "&" + utmParams;
                 } else {
